--- a/src/Main/header/header.css
+++ b/src/Main/header/header.css
@@ -68,4 +68,107 @@
   }
 
   
+/*RESPONSIVE*/
+/*RESPONSIVE*/
+/*RESPONSIVE*/
+/*RESPONSIVE*/
+/*RESPONSIVE*/
 
+/*991px*/
+/*991px*/
+@media (max-width: 991px){
+  .header {
+      padding: 2rem 3%;
+  }
+}
+
+
+/*768px*/
+/*768px*/
+@media (max-width: 768px){
+
+  /*MENU ICON*/
+  /*MENU ICON*/
+  /*MENU ICON*/
+
+  #menu-icon{
+      position: fixed;
+      display: block;
+  }
+
+  .header{
+      display: flex;
+      align-items: flex-end;
+  }
+
+  .navbar{
+      position: absolute;
+      top: 100%;
+      right: 3.45vw;
+      padding: 1rem 3%;
+      background: var(--second-bg-color);
+      border-top: .1rem solid rgba(0, 0, 0, .2);
+      box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
+      flex-direction: column;
+      align-items: center;
+      width: 35vw;
+      margin-top: 6vh;
+      padding:  5vh 0 5vh 0;
+      transform-origin: 0 0;
+  }
+
+  .navbar.on{
+      display: flex;
+      animation: navbarMobileAnimation .5s ease forwards;
+  }
+
+  .navbar.off{
+      animation: navbarMobileAnimationClosing .5s ease forwards;
+  }
+
+  .navbar.first-off{
+      display: none;
+  }
+  
+  .navbar-links{
+      font-size: 2rem;
+      margin: 2vh 0 2vh 0;
+      animation: none !important;
+  }
+
+  /*ANIMATION 768px*/
+  /*ANIMATION 768px*/
+  /*ANIMATION 768px*/
+
+  @keyframes navbarMobileAnimation{
+  0%{
+      opacity: 0;
+      transform: scaleY(0);
+  }
+
+  100%{
+      opacity: 1;
+      transform: scaleY(1);
+  }
+  }
+
+  @keyframes navbarMobileAnimationClosing{
+      0%{
+          opacity: 1;
+          transform: scaleY(1);
+      }
+  
+      100%{
+          opacity: 0;
+          transform: scaleY(0);
+      }
+      }
+}
+
+/*617px*/
+/*617px*/
+@media (max-width: 617px){
+  .navbar{
+      width: 50vw;
+  }
+}
