--- a/src/index.css
+++ b/src/index.css
@@ -2,79 +2,84 @@
 /* GENERAL STYLES */
 /* GENERAL STYLES */
 
-*{
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  border: none;
-  outline: none;
-  scroll-behavior: smooth;
-  list-style: none;
-  text-decoration: none;
-  font-family:'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-  sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    border: none;
+    outline: none;
+    scroll-behavior: smooth;
+    list-style: none;
+    text-decoration: none;
+    font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+        'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+        sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
-:root{
-  --bg-color: #1f242d;
-  --second-bg-color: #323946;
-  --text-color: #fff;
-  --main-color: #0ef;
+:root {
+    --bg-color: #1f242d;
+    --second-bg-color: #323946;
+    --text-color: #fff;
+    --main-color: #0ef;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+        monospace;
 }
 
-html{
-  font-size: 70%;
-  overflow-x: hidden;
+html {
+    font-size: 70%;
+    overflow-x: hidden;
 }
 
-body{
-  background: var(--bg-color);
-  color: var(--text-color);
+body {
+    background: var(--bg-color);
+    color: var(--text-color);
 }
 
-section{
-  padding: 10.52vh 10% 0;
+section {
+    padding: 10.52vh 10% 0;
 }
 
-span{
-  color: var(--main-color);
-  text-shadow: 0 0 1.7rem var(--main-color);
+span {
+    color: var(--main-color);
+    text-shadow: 0 0 1.7rem var(--main-color);
 }
 
 /* BUTTONS */
 /* BUTTONS */
 /* BUTTONS */
 
-.btn{
-  display: inline-block;
-  padding: 1rem 2.8rem;
-  background: var(--main-color);
-  border-radius: 4rem;
-  box-shadow: 0 0 2rem var(--main-color);
-  font-size: 1.6rem;
-  color: var(--second-bg-color);
-  letter-spacing: .1rem;
-  font-weight: 600;
-  transition: all .2s ease;
-  animation: fadeInRight 1.5s ease forwards;
+.btn {
+    display: inline-block;
+    padding: 1rem 2.8rem;
+    background: var(--main-color);
+    border-radius: 4rem;
+    box-shadow: 0 0 2rem var(--main-color);
+    font-size: 1.6rem;
+    color: var(--second-bg-color);
+    letter-spacing: .1rem;
+    font-weight: 600;
 }
 
-.btn:hover{
-  box-shadow: none;
+.home .btn {
+    margin-left: 21%;
+    margin-top: 3em;
+    transition: all .2s ease;
+    animation: fadeInRight 1.5s ease forwards;
 }
 
-::selection{
-  background-color: transparent;
-  color: rgb(169, 88, 176);
-  text-shadow: 0 0 2.5rem rgb(169, 88, 176);
+.btn:hover {
+    box-shadow: none;
+}
+
+::selection {
+    background-color: transparent;
+    color: rgb(169, 88, 176);
+    text-shadow: 0 0 2.5rem rgb(169, 88, 176);
 }
 
 /*KEYFRRAMES ANIMATIONS*/
@@ -83,74 +88,74 @@ span{
 /*KEYFRRAMES ANIMATIONS*/
 /*KEYFRRAMES ANIMATIONS*/
 
-@keyframes floatImage{
-  0%{
-      transform: translate(0, 0);
-  }
+@keyframes floatImage {
+    0% {
+        transform: translate(0, 0);
+    }
 
-  50%{
-      transform: translate(.8rem, 0);
-  }
+    50% {
+        transform: translate(.8rem, 0);
+    }
 
-  100%{
-      transform: translate(0, 0);
-  }
+    100% {
+        transform: translate(0, 0);
+    }
 }
 
-@keyframes zoomIn{
-  0% {
-      transform: scale(0);
-      opacity: 0;
-  }
+@keyframes zoomIn {
+    0% {
+        transform: scale(0);
+        opacity: 0;
+    }
 
-  100% {
-      transform: scale(1);
-      opacity: 1;
-  }
+    100% {
+        transform: scale(1);
+        opacity: 1;
+    }
 }
 
-@keyframes fadeInLeft{
-  0% {
-      transform: translateX(200px);
-      opacity: 0;
-  }
+@keyframes fadeInLeft {
+    0% {
+        transform: translateX(200px);
+        opacity: 0;
+    }
 
-  100% {
-      transform: translateX(0);
-      opacity: 1;
-  }
+    100% {
+        transform: translateX(0);
+        opacity: 1;
+    }
 }
 
-@keyframes fadeInRight{
-  0% {
-      transform: translateX(-200px);
-      opacity: 0;
-  }
+@keyframes fadeInRight {
+    0% {
+        transform: translateX(-200px);
+        opacity: 0;
+    }
 
-  100% {
-      transform: translateX(0);
-      opacity: 1;
-  }
+    100% {
+        transform: translateX(0);
+        opacity: 1;
+    }
 }
 
-@keyframes fadeIn{
-  0% {
-      opacity: 0;
-  }
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
 
-  100% {
-      opacity: 1;
-  }
+    100% {
+        opacity: 1;
+    }
 }
 
-@keyframes boxShadowAnimation{
-  0% {
-      box-shadow: 0 0 0 0 transparent;
-  }
+@keyframes boxShadowAnimation {
+    0% {
+        box-shadow: 0 0 0 0 transparent;
+    }
 
-  100%{
-  box-shadow: 0 0 8rem 4rem var(--main-color);
-  }
+    100% {
+        box-shadow: 0 0 8rem 4rem var(--main-color);
+    }
 }
 
 /*RESPONSIVE*/
@@ -162,313 +167,36 @@ span{
 /*1200px*/
 /*1200px*/
 @media (max-width: 1200px) {
-  html {
-      font-size: 60%;
-  }
+    html {
+        font-size: 60%;
+    }
 }
-
-/*991px*/
-/*991px*/
-@media (max-width: 991px){
-  .header {
-      padding: 2rem 3%;
-  }
-
-  section {
-      padding: 10rem 3% 2rem;
-  }
-
-  .services{
-      padding-bottom: 7rem;
-  }
-
-  .portfolio{
-      padding-bottom: 7rem;
-  }
-
-  .contact{
-      min-height: auto;
-  }
-
-  .footer{
-      padding: 2rem 3%;
-      margin-top: 10vh;
-  }
-}
-
-@media (max-width: 903px) {
-  .protfolio-container{
-      grid-template-columns: repeat(2, 1fr);
-  }
-}
-
 
 /*768px*/
 /*768px*/
-@media (max-width: 768px){
-  *{
-      text-align: center;
-  }
+@media (max-width: 768px) {
+    * {
+        text-align: center;
+    }
 
-  html{
-      font-size: 85%;
-  }
+    html {
+        font-size: 85%;
+    }
 
-  section{
-      padding: 15vh 2% 0;
-      height: fit-content !important;
-  }
+    section {
+        padding: 15vh 2% 0;
+        height: fit-content !important;
+    }
 
-  .heading{
-      padding: 1.1em;
-  }
-
-  /*MENU ICON*/
-  /*MENU ICON*/
-  /*MENU ICON*/
-
-  #menu-icon{
-      position: fixed;
-      display: block;
-  }
-
-  .header{
-      display: flex;
-      align-items: flex-end;
-  }
-
-  .navbar{
-      position: absolute;
-      top: 100%;
-      right: 3.45vw;
-      padding: 1rem 3%;
-      background: var(--second-bg-color);
-      border-top: .1rem solid rgba(0, 0, 0, .2);
-      box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
-      flex-direction: column;
-      align-items: center;
-      width: 35vw;
-      margin-top: 6vh;
-      padding:  5vh 0 5vh 0;
-      transform-origin: 0 0;
-  }
-
-  .navbar.on{
-      display: flex;
-      animation: navbarMobileAnimation .5s ease forwards;
-  }
-
-  .navbar.off{
-      animation: navbarMobileAnimationClosing .5s ease forwards;
-  }
-
-  .navbar.first-off{
-      display: none;
-  }
-  
-  .navbar-links{
-      font-size: 2rem;
-      margin: 2vh 0 2vh 0;
-      animation: none !important;
-  }
-
-  /*HOME*/
-  /*HOME*/
-  /*HOME*/
-
-
-  .home{
-      flex-direction: column-reverse;
-      gap: 10vh;
-  }
-
-  .home-content h3{
-      font-size: 2.6rem;
-  }
-
-  .home-content h1{
-      font-size: 5rem;
-  }
-
-  .home-img img{
-      width: 50vw;
-      margin: 12vh 0 6vh 0;
-      animation: zoomIn 2s ease forwards, boxShadowAnimationMobile 2s ease forwards, floatImageMobile 4s ease-in-out infinite;
-      animation-delay: 1s, 2s, 3s;
-  }
-
-  .home-content p{
-      margin-right: 15vw;
-      margin-left: 15vw;
-      font-size: 1.4rem;
-  }
-
-  .home .btn{
-      margin-left: 0;
-  }
-
-  /*ABOUT*/
-  /*ABOUT*/
-  /*ABOUT*/
-
-  .about{
-      flex-direction: column-reverse;
-      margin-top: 10rem;
-  }
-
-  .about .heading{
-      text-align: center;
-      margin: 2rem;
-  }
-
-  .about img{
-      width: 70vw;
-      margin: 0 0 10vh 0;
-  }
-
-  .about-content p{
-      margin-right: 10vw;
-      margin-left: 10vw;
-      margin-top: 2vw;
-  }
-
-  .services h2{
-      margin-bottom: 3rem;
-  }
-
-  .portfolio h2{
-      margin-bottom: 3rem;
-  }
-
-  .protfolio-container{
-      grid-template-columns: repeat(2, 1fr);
-  }
-
-  .portfolio-layer h4{
-      font-size: 1.3rem;
-  }
-
-  .portfolio-layer p{
-      font-size: .95rem;
-  }
-
-  .portfolio-layer a{
-      height: 2.5rem;
-      width: 2.5rem;
-  }
-
-  .portfolio-layer a i{
-      font-size: 1.4rem;
-  }
-
-  .footer{
-      margin-top: 20vh;
-  }
-
-  /*ANIMATION 768px*/
-  /*ANIMATION 768px*/
-  /*ANIMATION 768px*/
-
-  @keyframes navbarMobileAnimation{
-  0%{
-      opacity: 0;
-      transform: scaleY(0);
-  }
-
-  100%{
-      opacity: 1;
-      transform: scaleY(1);
-  }
-  }
-
-  @keyframes navbarMobileAnimationClosing{
-      0%{
-          opacity: 1;
-          transform: scaleY(1);
-      }
-  
-      100%{
-          opacity: 0;
-          transform: scaleY(0);
-      }
-      }
-
-  @keyframes floatImageMobile{
-  0%{
-      transform: translate(0, 0);
-  }
-
-  50%{
-      transform: translate(0, .8rem);
-  }
-
-  100%{
-      transform: translate(0, 0);
-  }
-  }
-
-  @keyframes boxShadowAnimationMobile{
-      0% {
-          box-shadow: 0 0 0 0 transparent;
-      }
-  
-      100%{
-      box-shadow: 0 0 5rem 2rem var(--main-color);
-      }
-  }
-}
-
-/*617px*/
-/*617px*/
-@media (max-width: 617px){
-  .navbar{
-      width: 50vw;
-  }
-
-  .protfolio-container{
-      grid-template-columns: 1fr;
-  }
-
-  .portfolio-layer a{
-      height: 3.5rem;
-      width: 3.5rem;
-  }
-
-  .portfolio-layer a i{
-      font-size: 1.9rem;
-  }
+    .heading {
+        padding: 1.1em;
+    }
 }
 
 /* 450 */
 /* 450 */
-@media (max-width: 450px){
-  html{
-      font-size: 65%;
-  }
-
-  .contact form .input-box input{
-      width: 100%;
-  }
-}
-
-
-/* 365 */
-/* 365 */
-@media (max-width: 365px){
-  .home-img img{
-      width: 90vw;
-  }
-
-  .about-img img{
-      width: 90vw;
-  }
-
-  .footer{
-      flex-direction: column-reverse;
-  }
-
-  .footer p{
-      text-align: center;
-      margin-top: 2rem;
-  }
+@media (max-width: 450px) {
+    html {
+        font-size: 65%;
+    }
 }
