partially working navbar and hamburger icon when clicking on the hamburger icon to close the navbar, the navbar hides and then closes. to solve this, i need to remove the class "first-off" when the hamburger icon is clicked. when clicking on the navbar links, the navbar must close immediately, this must be fixed in the next commit.

--- a/src/Main/header/header.css
+++ b/src/Main/header/header.css
@@ -118,7 +118,7 @@
   }
 
   .navbar.on{
-      display: flex;
+    display: flex;
       animation: navbarMobileAnimation .5s ease forwards;
   }
 
@@ -127,7 +127,7 @@
   }
 
   .navbar.first-off{
-      display: none;
+    visibility: hidden;
   }
   
   .navbar-links{
@@ -154,12 +154,11 @@
 
   @keyframes navbarMobileAnimationClosing{
       0%{
-          opacity: 1;
           transform: scaleY(1);
       }
   
       100%{
-          opacity: 0;
+          visibility: hidden;
           transform: scaleY(0);
       }
       }
