--- a/src/Main/home/home.css
+++ b/src/Main/home/home.css
@@ -72,6 +72,14 @@
     box-shadow: 0 0 1rem var(--main-color);
 }
 
+
+.home .btn {
+    margin-left: 17.5%;
+    margin-top: 3em;
+    transition: all .2s ease;
+    animation: fadeInRight 1.5s ease forwards;
+}
+
 /*RESPONSIVE*/
 /*RESPONSIVE*/
 /*RESPONSIVE*/
