moving the navbar to the bottom of the viewport and finishing the its styles

--- a/src/Main/footer/footer.css
+++ b/src/Main/footer/footer.css
@@ -4,7 +4,7 @@
     align-items: center;
     flex-wrap: center;
     padding: 2rem 9%;
-    background: var(--second-bg-color);
+    background: var(--bg-color);
 }
 
 .footer-text p {
