--- a/src/Main/header/header.css
+++ b/src/Main/header/header.css
@@ -1,73 +1,66 @@
-.header{
-    position:fixed;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: transparent;
-    z-index: 1;
-  }
-  
-  /*NAVBAR*/
-  /*NAVBAR*/
-  /*NAVBAR*/
-  /*NAVBAR*/
-  /*NAVBAR*/
-  
-  .navbar{
-    display: flex;
-    justify-content: center;
-    width: 42vw;
-    margin: .75% 0 .75% 0;
-    padding: .8% 0 .8% 0;
-    border-radius: 20px;
-    background-color: transparent;
-  }
-  
-  .navbar-links{
-    margin:0 1% 0 1%;
-    font-weight: 700;
-    transition: .5s;
-    padding: 1% 3.5% 1.5% 3.5%;
-    color: var(--text-color);
-    border-radius: 20px;
-    text-shadow: 0 0 1.5rem var(--main-color);
-    font-size: 1.5rem;
-  }
-  
-  #menu-icon{
-    position: fixed;
-    font-size: 5rem;
-    color: var(--text-color);
-    display: none;
-    right: 3vw;
-    top: 3vh;
-  }
-  
-  /*animating the navbar elements*/
-  .navbar-links:nth-of-type(1){
-    animation: fadeInRight 1.5s ease forwards;
-  }
-  .navbar-links:nth-of-type(2){
-    animation: fadeInRight 1.5s ease forwards;
-  }
-  .navbar-links:nth-of-type(3){
-    animation: zoomIn 1.5s ease forwards;
-  }
-  .navbar-links:nth-of-type(4){
-    animation: fadeInLeft 1.5s ease forwards;
-  }
-  .navbar-links:nth-of-type(5){
-    animation: fadeInLeft 1.5s ease forwards;
-  }
-  /*end*/
-  
-  .navbar-links:hover, .navbar-links.active{
-    color: var(--main-color);
-    text-shadow: 0 0 3rem var(--main-color);
-  }
+.header {
+  position: fixed;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: transparent;
+  z-index: 1;
+  bottom: 0;
+}
 
-  
+/*NAVBAR*/
+/*NAVBAR*/
+/*NAVBAR*/
+/*NAVBAR*/
+/*NAVBAR*/
+
+.navbar {
+  display: flex;
+  justify-content: center;
+  width: fit-content;
+  border-radius: 4rem;
+  margin-bottom: 3.5vh;
+  background: #32394680;
+  backdrop-filter: blur(6px);
+  box-shadow: 0 0 1rem .3rem #32394680;
+}
+
+.navbar-links {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 700;
+  transition: .5s;
+  color: var(--text-color);
+  border-radius: 50%;
+  text-shadow: 0 0 1.5rem var(--main-color);
+  font-size: 2rem;
+  width: 3.7rem;
+  height: 3.7rem;
+  margin: .6rem .9rem .6rem .9rem;
+}
+
+.language-nav-btn {
+  background: transparent;
+}
+
+#menu-icon {
+  position: fixed;
+  font-size: 5rem;
+  color: var(--text-color);
+  display: none;
+  right: 3vw;
+  top: 3vh;
+}
+
+.navbar-links:hover,
+.navbar-links.active {
+  color: var(--bg-color);
+  background-color: var(--main-color);
+}
+
+
 /*RESPONSIVE*/
 /*RESPONSIVE*/
 /*RESPONSIVE*/
@@ -76,98 +69,98 @@
 
 /*991px*/
 /*991px*/
-@media (max-width: 991px){
+@media (max-width: 991px) {
   .header {
-      padding: 2rem 3%;
+    padding: 2rem 3%;
   }
 }
 
 
 /*768px*/
 /*768px*/
-@media (max-width: 768px){
+@media (max-width: 768px) {
 
   /*MENU ICON*/
   /*MENU ICON*/
   /*MENU ICON*/
 
-  #menu-icon{
-      position: fixed;
-      display: block;
+  #menu-icon {
+    position: fixed;
+    display: block;
   }
 
-  .header{
-      display: flex;
-      align-items: flex-end;
-  }
-
-  .navbar{
-      position: absolute;
-      top: 100%;
-      right: 3.45vw;
-      padding: 1rem 3%;
-      background: var(--second-bg-color);
-      border-top: .1rem solid rgba(0, 0, 0, .2);
-      box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
-      flex-direction: column;
-      align-items: center;
-      width: 35vw;
-      margin-top: 6vh;
-      padding:  5vh 0 5vh 0;
-      transform-origin: 0 0;
-  }
-
-  .navbar.on{
+  .header {
     display: flex;
-      animation: navbarMobileAnimation .5s ease forwards;
+    align-items: flex-end;
   }
 
-  .navbar.off{
-      animation: navbarMobileAnimationClosing .5s ease forwards;
+  .navbar {
+    position: absolute;
+    top: 100%;
+    right: 3.45vw;
+    padding: 1rem 3%;
+    background: var(--second-bg-color);
+    border-top: .1rem solid rgba(0, 0, 0, .2);
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
+    flex-direction: column;
+    align-items: center;
+    width: 35vw;
+    margin-top: 6vh;
+    padding: 5vh 0 5vh 0;
+    transform-origin: 0 0;
   }
 
-  .navbar.first-off{
+  .navbar.on {
+    display: flex;
+    animation: navbarMobileAnimation .5s ease forwards;
+  }
+
+  .navbar.off {
+    animation: navbarMobileAnimationClosing .5s ease forwards;
+  }
+
+  .navbar.first-off {
     visibility: hidden;
   }
-  
-  .navbar-links{
-      font-size: 2rem;
-      margin: 2vh 0 2vh 0;
-      animation: none !important;
+
+  .navbar-links {
+    font-size: 2rem;
+    margin: 2vh 0 2vh 0;
+    animation: none !important;
   }
 
   /*ANIMATION 768px*/
   /*ANIMATION 768px*/
   /*ANIMATION 768px*/
 
-  @keyframes navbarMobileAnimation{
-  0%{
+  @keyframes navbarMobileAnimation {
+    0% {
       opacity: 0;
       transform: scaleY(0);
-  }
+    }
 
-  100%{
+    100% {
       opacity: 1;
       transform: scaleY(1);
-  }
+    }
   }
 
-  @keyframes navbarMobileAnimationClosing{
-      0%{
-          transform: scaleY(1);
-      }
-  
-      100%{
-          visibility: hidden;
-          transform: scaleY(0);
-      }
-      }
+  @keyframes navbarMobileAnimationClosing {
+    0% {
+      transform: scaleY(1);
+    }
+
+    100% {
+      visibility: hidden;
+      transform: scaleY(0);
+    }
+  }
 }
 
 /*617px*/
 /*617px*/
-@media (max-width: 617px){
-  .navbar{
-      width: 50vw;
+@media (max-width: 617px) {
+  .navbar {
+    width: 50vw;
   }
 }
