changing the style of the navbar on mobile phones and on desktop, it now slides from the left side to the right on mobiles

--- a/src/Main/home/home.css
+++ b/src/Main/home/home.css
@@ -100,6 +100,7 @@
     .home {
         flex-direction: column-reverse;
         gap: 10vh;
+        margin-top: 5vh;
     }
 
     .home-content h3 {
@@ -160,6 +161,6 @@
 /* 365 */
 @media (max-width: 365px) {
     .home-img img {
-        width: 90vw;
+        width: 75vw;
     }
 }
