--- a/src/Main/header/header.css
+++ b/src/Main/header/header.css
@@ -4,7 +4,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background: transparent;
   z-index: 1;
   bottom: 0;
 }
@@ -16,6 +15,7 @@
 /*NAVBAR*/
 
 .navbar {
+  position: fixed;
   display: flex;
   justify-content: center;
   width: fit-content;
@@ -24,6 +24,8 @@
   background: #32394680;
   backdrop-filter: blur(6px);
   box-shadow: 0 0 1rem .3rem #32394680;
+  animation: navbarAnimation 2s ease;
+  margin-bottom: 8rem;
 }
 
 .navbar-links {
@@ -47,17 +49,27 @@
 
 #menu-icon {
   position: fixed;
-  font-size: 5rem;
+  font-size: 4rem;
   color: var(--text-color);
-  display: none;
-  right: 3vw;
+  left: 3vw;
   top: 3vh;
+  display: none;
 }
 
 .navbar-links:hover,
 .navbar-links.active {
   color: var(--bg-color);
   background-color: var(--main-color);
+}
+
+@keyframes navbarAnimation {
+  0% {
+    transform: translateY(100px);
+  }
+
+  100% {
+    transform: translate(0);
+  }
 }
 
 
@@ -85,29 +97,30 @@
   /*MENU ICON*/
 
   #menu-icon {
-    position: fixed;
+    z-index: 2;
     display: block;
   }
 
   .header {
     display: flex;
-    align-items: flex-end;
+    top: 0;
+    width: 100%;
+    height: 12vh;
   }
 
   .navbar {
-    position: absolute;
-    top: 100%;
-    right: 3.45vw;
-    padding: 1rem 3%;
-    background: var(--second-bg-color);
-    border-top: .1rem solid rgba(0, 0, 0, .2);
-    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
+    display: flex;
     flex-direction: column;
+    justify-content: flex-start;
+    margin: 0;
+    left: 0;
+    height: 100vh;
+    top: 0;
+    width: 30vw;
+    border-radius: 0;
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
     align-items: center;
-    width: 35vw;
-    margin-top: 6vh;
-    padding: 5vh 0 5vh 0;
-    transform-origin: 0 0;
+    padding: .3rem;
   }
 
   .navbar.on {
@@ -119,14 +132,18 @@
     animation: navbarMobileAnimationClosing .5s ease forwards;
   }
 
-  .navbar.first-off {
+  /* .navbar.first-off {
     visibility: hidden;
-  }
+  } */
 
   .navbar-links {
     font-size: 2rem;
     margin: 2vh 0 2vh 0;
     animation: none !important;
+  }
+
+  .navbar-links:nth-of-type(1){
+    margin-top: 13vh;
   }
 
   /*ANIMATION 768px*/
@@ -135,32 +152,21 @@
 
   @keyframes navbarMobileAnimation {
     0% {
-      opacity: 0;
-      transform: scaleY(0);
+      transform: translateX(-300px);
     }
 
     100% {
-      opacity: 1;
-      transform: scaleY(1);
+      transform: translateX(0);
     }
   }
 
   @keyframes navbarMobileAnimationClosing {
     0% {
-      transform: scaleY(1);
+      transform: translateX(0);
     }
 
     100% {
-      visibility: hidden;
-      transform: scaleY(0);
+      transform: translateX(-300px);
     }
-  }
-}
-
-/*617px*/
-/*617px*/
-@media (max-width: 617px) {
-  .navbar {
-    width: 50vw;
   }
 }
