--- a/src/Main/header/header.css
+++ b/src/Main/header/header.css
@@ -113,7 +113,7 @@
     flex-direction: column;
     justify-content: flex-start;
     margin: 0;
-    left: 0;
+    left: -300px;
     height: 100vh;
     top: 0;
     width: 30vw;
@@ -132,10 +132,6 @@
     animation: navbarMobileAnimationClosing .5s ease forwards;
   }
 
-  /* .navbar.first-off {
-    visibility: hidden;
-  } */
-
   .navbar-links {
     font-size: 2rem;
     margin: 2vh 0 2vh 0;
@@ -152,21 +148,20 @@
 
   @keyframes navbarMobileAnimation {
     0% {
-      transform: translateX(-300px);
-    }
-
-    100% {
       transform: translateX(0);
+    }
+    100% {
+      transform: translateX(300px);
     }
   }
 
   @keyframes navbarMobileAnimationClosing {
     0% {
-      transform: translateX(0);
+      transform: translateX(300px);
     }
 
     100% {
-      transform: translateX(-300px);
+      transform: translateX(0);
     }
   }
 }
