--- a/src/Main/portfolio/portfolio.css
+++ b/src/Main/portfolio/portfolio.css
@@ -19,8 +19,8 @@
     box-shadow: 0 0 1rem var(--bg-color);
     overflow: hidden;
     display: flex;
-    height: 97%;
-    width: 97%;
+    height: 99%;
+    width: 99%;
 }
 
 .portfolio-box img {
@@ -38,9 +38,9 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 238, 255, .6));
+    background: linear-gradient(var(--bg-half-opacity), var(--main-half-opacity));
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     flex-direction: column;
     text-align: center;
@@ -62,19 +62,26 @@
     margin: .3rem 0 1rem;
 }
 
-.portfolio-layer a {
+.portfolio-links-container {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 4rem;
-    height: 4rem;
-    background: var(--text-color);
-    border-radius: 50%;
+    flex-direction: row;
 }
 
-.portfolio-layer a i {
-    font-size: 1.9rem;
-    color: var(--second-bg-color);
+.portfolio-layer div a {
+    display: flex;
+    align-items: center;
+    font-weight: bold;
+    font-size: 1.2rem;
+    background: var(--bg-color);
+    border-radius: 5rem;
+    padding: .9rem;
+    margin: 1rem;
+    color: var(--text-color);
+}
+
+.portfolio-layer div a i {
+    font-size: 1.8rem;
+    margin-right: .4rem;
 }
 
 /*RESPONSIVE*/
