fixing some performance issues, replacing all images with webp alternatives, and removing the icons cdn and improting the icons from react-icons library

--- a/src/Main/header/header.css
+++ b/src/Main/header/header.css
@@ -61,7 +61,7 @@
 .navbar-links.active {
   color: var(--bg-color);
   background-color: var(--main-color);
-  scale: 1.12;
+  transform: scale(1.12);
 }
 
 @keyframes navbarAnimation {
