--- a/src/Main/home/home.css
+++ b/src/Main/home/home.css
@@ -57,7 +57,7 @@
     background: transparent;
     border: .3rem solid var(--main-color);
     border-radius: 50%;
-    font-size: 2.1rem;
+    font-size: 1.85rem;
     color: var(--main-color);
     margin: 3rem 1.5rem 0 0;
     opacity: 0%;
@@ -70,6 +70,7 @@
     background: var(--main-color);
     color: var(--second-bg-color);
     box-shadow: 0 0 1rem var(--main-color);
+    transform: scale(1.5);
 }
 
 
