--- a/src/Main/portfolio/portfolio.css
+++ b/src/Main/portfolio/portfolio.css
@@ -10,7 +10,7 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     align-items: center;
-    gap: 1rem;
+    gap: 1.5rem;
 }
 
 .portfolio-box {
@@ -19,12 +19,12 @@
     box-shadow: 0 0 1rem var(--bg-color);
     overflow: hidden;
     display: flex;
-    height: 99%;
-    width: 99%;
+    height: 22rem;
 }
 
 .portfolio-box img {
     width: 100%;
+    height: 100%;
     transition: .5s ease;
 }
 
@@ -54,11 +54,11 @@
 }
 
 .portfolio-layer h4 {
-    font-size: 2.8rem;
+    font-size: 2.7rem;
 }
 
 .portfolio-layer p {
-    font-size: 1.4rem;
+    font-size: 1.3rem;
     margin: .3rem 0 1rem;
 }
 
