--- a/src/Main/home/home.css
+++ b/src/Main/home/home.css
@@ -70,7 +70,7 @@
     background: var(--main-color);
     color: var(--second-bg-color);
     box-shadow: 0 0 1rem var(--main-color);
-    transform: scale(1.5);
+    scale: 1.1;
 }
 
 
