fixing all icons

--- a/src/Main/services/services.css
+++ b/src/Main/services/services.css
@@ -28,10 +28,10 @@
 
 .services-box:hover {
     border-color: var(--main-color);
-    transform: scale(1.02);
+    transform: scale(1.03);
 }
 
-.services-box i {
+.services-box svg {
     font-size: 7rem;
     color: var(--main-color);
 }
