--- a/src/Main/footer/footer.css
+++ b/src/Main/footer/footer.css
@@ -33,8 +33,8 @@
     box-shadow: 0 0 2rem var(--main-color);
 }
 
-.footer-iconTop a i {
-    font-size: 2.5rem;
+.footer-iconTop a svg {
+    font-size: 1.8rem;
     color: var(--second-bg-color);
 }
 
