--- a/src/index.css
+++ b/src/index.css
@@ -8,12 +8,8 @@
     box-sizing: border-box;
     border: none;
     outline: none;
-    scroll-behavior: smooth;
     list-style: none;
     text-decoration: none;
-    font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-        'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-        sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
@@ -33,6 +29,7 @@ code {
 }
 
 html {
+    scroll-behavior: smooth;
     font-size: 70%;
     overflow-x: hidden;
 }
@@ -40,6 +37,12 @@ html {
 body {
     background: var(--bg-color);
     color: var(--text-color);
+}
+
+#root {
+    font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
 }
 
 section {
