--- a/src/Main/skills/skills.css
+++ b/src/Main/skills/skills.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    border: 1px solid white;
+    padding: 10vh 10% 13vh;
 }
 
 .skills h2 {
@@ -13,36 +13,82 @@
 
 .technologies-experience-container{
     display: flex;
-    gap: 10rem;
+    gap: 15rem;
+    justify-content: center;
+}
+
+.technologies{
+    width: 30%;
 }
 
 .technologies span{
     display: inline-flex;
-    align-items: center;
     justify-content: center;
-    font-size: 3rem;
+    align-items: center;
     background-color: var(--second-bg-color);
-    height: 5.5rem;
-    width: 5.5rem;
+    height: 6rem;
+    width: 6rem;
     border-radius: 50%;
     padding: 1rem;
     margin: 1rem;
+    transition: .5s ease;
+    border: 2px solid transparent;
+    color: #aab2bd;
+}
+
+.small-icons{
+    font-size: 3.5rem;
+}
+
+.small-icons:nth-last-of-type(1){
+    color: #38bdf8;
 }
 
 .experience-box{
+    display: flex;
+    gap: 3rem;
+    border: 2px solid transparent;
     background: var(--second-bg-color);
     border-radius: 1.5rem;
+    transition: .5s ease;
+    margin: 1rem;
+    width: 95%;
+    position: relative;
+}
+
+.experience-year{
+    font-size: 1.5rem;
+    margin: 2rem 0 0 1rem ;
 }
 
 .experience-box h3{
-    font-size: 2rem;
-    margin: 1rem;
-    padding: 1rem 1rem 0 1rem;
+    font-size: 2.1rem;
+    padding: 2rem 2rem 1rem 0;
 }
 
-.experience-box p{
-    font-size: 1rem;
-    padding: 2rem;
+.experience-box h5{
+    font-size: 1.05rem;
 }
 
+.experience-box-content p{
+    font-size: 1.1rem;
+    padding: 2rem 2rem 2rem 0;
+}
 
+.experience-box:hover{
+    transform: scale(1.03);
+    border-color: var(--main-color);
+}
+
+.technologies span:hover{
+    transform: scale(1.09);
+    border-color: var(--main-color);
+}
+
+/* RESPONSIVE */
+
+@media (max-width: 764px) {
+    .technologies-experience-container{
+        flex-direction: column-reverse;
+    }
+}
