changing the drop up menu effect of the language section, and changing the title of portfolio boxes to coming soon

--- a/src/Main/footer/language.css
+++ b/src/Main/footer/language.css
@@ -2,6 +2,7 @@
     color: var(--text-color);
     position: relative;
     cursor: pointer;
+    padding: .5rem;
 }
 
 .active-language-container {
@@ -16,7 +17,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    bottom: 180%;
+    bottom: 110%;
     height: fit-content;
     background: #49526480;
     box-shadow: 0 0 1rem .3rem #32394680;
@@ -25,8 +26,10 @@
     backdrop-filter: blur(6px);
     z-index: 2;
     cursor: default;
-    transition: .5s ease;
+    transform: scaleY(0);
     opacity: 0;
+    transition: .5s ease;
+    transform-origin: 0 100%;
 }
 
 .languages-bar a {
@@ -36,6 +39,7 @@
 }
 
 .show-language-bar {
+    transform: scaleY(1);
     opacity: 1;
 }
 
