changing the behaviour of language buttons. when we click on a button, the active language changes. And also creating general css class for polished elements like navbar and language bar

--- a/src/Main/footer/language.css
+++ b/src/Main/footer/language.css
@@ -19,11 +19,7 @@
     flex-direction: column;
     bottom: 100%;
     height: fit-content;
-    background: #49526480;
-    box-shadow: 0 0 1rem .3rem #32394680;
-    border: 1px solid #49526480;
     border-radius: 1rem;
-    backdrop-filter: blur(6px);
     z-index: 2;
     cursor: default;
     transform: scaleY(0);
@@ -32,10 +28,12 @@
     transform-origin: 0 100%;
 }
 
-.languages-bar a {
+.languages-bar button {
     color: var(--text-color);
     font-size: 1.4rem;
     padding: 1rem 2rem 2rem 2rem;
+    background: transparent;
+    cursor: pointer;
 }
 
 .show-language-bar {
@@ -53,6 +51,6 @@
     font-size: 2.2rem;
 }
 
-.languages-bar a:hover {
+.languages-bar button:hover {
     color: var(--main-color);
 }
