--- a/src/index.css
+++ b/src/index.css
@@ -50,6 +50,8 @@ body {
     font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
+    max-width: 204rem;
+    margin: 0 auto;
 }
 
 section {
@@ -226,7 +228,7 @@ span {
     }
 
     .heading {
-        padding: 1.1em;
+        padding: 1.1rem;
     }
 }
 
@@ -235,5 +237,11 @@ span {
 @media (max-width: 450px) {
     html {
         font-size: 65%;
+    }
+}
+
+@media (max-width: 295px) {
+    html {
+        font-size: 40%;
     }
 }
