--- a/src/Main/header/header.css
+++ b/src/Main/header/header.css
@@ -47,12 +47,11 @@
   color: var(--text-color);
   left: 1.5rem;
   top: 1.5rem;
-  display: none;
   z-index: 4;
 }
 
 .navbar-links:hover,
-.navbar-links.active {
+.navbar-links.active-link {
   color: var(--bg-color);
   background-color: var(--main-color);
   transform: scale(1.12);
@@ -81,52 +80,13 @@
 
 /*768px*/
 @media (max-width: 768px) {
-
-  /*MENU ICON*/
-
-  #menu-icon {
-    z-index: 4;
-    display: block;
-  }
-
-  .header {
-    display: flex;
-    top: 0;
-    width: 100%;
-    height: 0;
-  }
-
   .navbar {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    margin: 0;
-    left: -300px;
-    height: 100vh;
-    top: 0;
-    width: 25vw;
-    border-radius: 0;
-    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
-    align-items: center;
-    padding: .3rem;
-    transition: .5s;
-    animation: none;
-
+    bottom: 2rem;
   }
-
-  .navbar.on {
-    top: 0;
-    display: flex;
-    left: 0;
-  }
-
   .navbar-links {
-    font-size: 2rem;
-    margin: 2vh 0 2vh 0;
-    animation: none !important;
-  }
-
-  .navbar-links:nth-of-type(1){
-    margin-top: 13vh;
+    width: 2.5rem;
+    height: 2.5rem;
+    font-size: 1.5rem;
+    margin: .5rem;
   }
 }
