--- a/src/Main/home/home.css
+++ b/src/Main/home/home.css
@@ -38,6 +38,7 @@
     font-size: 1.2rem;
     line-height: 1.5em;
     margin-top: 2rem;
+    width: 85%;
 }
 
 .home-img img {
@@ -48,8 +49,9 @@
     max-height: 50rem;
     border-radius: 50%;
     border: 5px solid rgba(0, 238, 255, 0.5);
-    animation: boxShadowAnimation 1.8s ease forwards, floatImage 4s ease-in-out infinite;
-    animation-delay: 1s, 2s;
+    opacity: 0;
+    animation: fadeInLeft 2s ease forwards, boxShadowAnimation 1.8s ease forwards, floatImage 4s ease-in-out infinite;
+    animation-delay: 1s, 1.1s, 3s;
     z-index: 2;
 }
 
@@ -116,6 +118,7 @@
         width: 50vw;
         height: 50vw;
         margin: 12vh 0 6vh 0;
+        opacity: 1;
         animation: boxShadowAnimationMobile 2s ease forwards;
         animation-delay: 1s, 2s;
     }
@@ -124,6 +127,7 @@
         font-size: 1.4rem;
         animation: none;
         margin: 2rem 5% 0 5%;
+        width: 90%;
     }
 
     .social-media a {
@@ -132,7 +136,6 @@
     }
 
     .home .btn {
-        margin-left: 0;
         animation: none;
     }
 
